# system-metrics-service

./: .env  .gitignore  Dockerfile  README.md  TODO  docker-compose.nvidia.yml  docker-compose.yml  run.sh  sim.sh
.github/workflows/: build-image.yml  linter.yml  ruff.yml
app/: app.py  pyproject.toml
app/routers/: cpu.py  custom_metrics.py  disk.py  gpu.py  memory.py  npu.py
app/utils/: async_http.py  config.py  drm_gpu.py  logger.py  prometheus.py
app/utils/memory_metrics/: disk_metrics.py
app/utils/xpu_metrics/: cpu_metrics.py  gpu_metrics.py  npu_metrics.py
app/utils/xpu_metrics/gpu_drivers/: gpu_nvidia.py  gpu_xe.py
configs/: nvidia.conf  otel-collector-config.yaml  prometheus.yml  telegraf.conf
scripts/: npu-sim.sh  npu-util.sh
sysfs/: .env  Dockerfile  docker-compose.nvidia.yml  docker-compose.yml
sysfs/app/: pyproject.toml
sysfs/app/utils/memory_metrics/: ram_metrics.py
sysfs/app/utils/xpu_metrics/: cpu_metrics.py  gpu_metrics.py  npu_metrics.py  xpu_interface.py
sysfs/app/utils/xpu_metrics/gpu_drivers/: gpu_i915.py  gpu_nvidia.py
