[project]
name = "system-metrics-service"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
lint.extend-select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "NPY",
    "BLE",
    "FAST",
]

[tool.ruff.lint.extend-per-file-ignores]
"app.py" = ['BLE001']

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
