[project]
name = "system-metrics-service"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "nvidia-ml-py>=13.595.45",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
lint.extend-select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "NPY",
    "BLE",
    "FAST",
]
